--- a/css/tablet.css
+++ b/css/tablet.css
@@ -11,280 +11,8 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
-body {
-    font-family: "Noto Sans JP", sans-serif;
-    line-height: 1.5;
-}
-
-main {
-    margin: 0 20%;
-}
-
-header {
-    margin: 7% 0;
-}
-
-h1 {
-    color: #3b3b3b;
-    font-size: 2em;
-    font-weight: 600;
-}
-
-.titlelogo {
-    display: flex;
-    align-items: center;
-}
-
-.titlelogo img {
-    width: 0.214in;
-    height: 0.214in;
-}
-
-nav {
-    display:none;
-}
-
-.banner { 
-    display:none;
-}
-
-.intro {
-    text-align: center;
-    color:  #3b3b3b;
-    margin-bottom: 15%;
-}
-
-.intro h2 {
-    font-weight: 500;
-    font-size: 1.7em;
-    color:  #3b3b3b;
-}
-
-strong {
-    color: #1eafde;
-}
-
-.row {
-    display: flex;
-    flex-direction: column;
-}
-
-.row .title h3 {
-    text-align: center;
-    font-size: 2em;
-    font-weight: 300;
+html, body {
     margin: 0;
-}
-
-.row .title p {
-    text-align: center;
-    font-size: 0.7em;
-    margin: 0;
-    color: #939393;
-    position: relative;
-}
-
-.column {
-    display: flex;
-    justify-content: center;
-    margin: 2em 0;
-    position: relative;
-}
-
-.contentcoltext {
-    margin: 0 1em;
-}
-
-.contentcoltext h4 {
-    margin: 0;
-    color:  #3b3b3b;
-}
-
-.contentcoltext p {
-    font-size: 0.8em;
-    margin: 0;
-    color:  #939393;
-}
-
-.imgheader {
-    margin: 0;
-    width: 3.5em;
-    height: 3.5em;
-}
-
-.imgheader img {
-    width: 3.5em;
-    height: 3.5em;
-}
-
-.whitetext {
-    color: white;
-}
-
-.content {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-}
-
-.contentimg {
-    margin: 0;
-    max-width: 100%;
-    max-height: 100%;
-    position: relative;
-
-}
-
-.contentimg img{
-    max-width: 100%;
-    max-height: 100%;
-}
-
-.imgcolumn {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 35vh;
-    max-height: 35vh;
-    background-image: url("/img/placeholder.svg");
-    background-size: 100% 100%;
-    margin: 1vh 0;
-}
-
-.date {
-    background-color: #d8605f;
-    min-width: 20%;
-    max-width: 20%;
-    min-height: 5%;
-    max-height: 5%;
-    justify-content: center;
-    text-align: center;
-}
-
-.date h5, p {
-    margin: 5%;
-    color: white;
-}
-
-.imgcolumn h5 {
-    font-size: 1.3em;
-    font-weight: 300;
-}
-
-.imgcolumn p {
-    font-size: 0.8em;
-    font-weight: 300;
-}
-
-.postbanner {
-    background-color: #19b2de;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-height: 6vh;
-    min-height: 6vh;
-    padding: 2% 7%;
-}
-
-.postbantext {
-    max-height: 100%;
-    min-width: 70%;
-}
-
-.postbanner h5, p {
-    margin: 0;
-    color: white;
-}
-
-.bannericon {
-    max-height: 3.5em;
-    max-width: 3.5em;
-    margin: 0;
-}
-
-.bannericon img {
-    max-height: 3.5em;
-    max-width: auto;
-}
-
-.projcolumn {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    min-height: 30vh;
-    max-height: 30vh;
-    background-image: url("/img/placeholder.svg");
-    background-size: 100% 100%;
-    margin: 1vh 0;
-}
-
-.none {
-    display: none;
-}
-
-footer {
-    margin-top: 10%;
-    padding: 0 20%;
-    background-color: #16242f;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-}
-
-footer .row {
-    max-height: 29vh;
-    overflow: hidden;
-    margin-bottom: 5%;
-}
-
-h6 {
-    color: white;
-    font-size: 1em;
-    margin: 0 0 0.8em 0;
-}
-
-footer .subcolumn p {
-    font-size: 0.79em;
-}
-
-.authorimg {
-    max-width: 50%;
-    min-width: 50%;
-    margin: 0 2% 0 0;
-}
-
-.authorimg img {
-    max-width: 100%;
-}
-
-.subcolumn {
-    display: flex;
-    flex-direction: column;
-}
-
-footer .subcolumn {
-    margin-left: 2%;
-}
-
-.subrow {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 8%;
-}
-
-.italic {
-    font-style: italic;
-}
-
-.socialicon {
-    margin: 0.5%;
-    max-width: 3.5em;
-    max-height: 3.5em;
-}
-
-.socialicon img {
-    max-width: 100%;
 }
 
 /*
